--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,42 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    def nav_version = "2.3.5"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+
+    //Read More textView
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
+
+    implementation('com.github.holgerbrandl:themoviedbapi:1.12'){
+        exclude group:'commons-logging', module: 'commons-logging'
+    }
+
+    implementation ('com.github.bumptech.glide:glide:4.12.0') {
+        exclude group: "com.android.support"
+    }
+    implementation 'org.jetbrains:annotations:15.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
