--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
-        def nav_version = "2.3.5"
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        def nav_version = '2.4.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
 
 
         // NOTE: Do not place your application dependencies here; they belong
