--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,5 +112,6 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
 }
