--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".views.MovieDetailsActivity"
             android:exported="true" />
         <activity
+            android:name=".views.SearchActivity"
+            android:exported="true" />
+        <activity
             android:name=".views.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
