--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
             <action android:name="com.google.android.youtube.api.service.START" />
         </intent>
     </queries>
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -18,6 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CineMates">
+        <activity
+            android:name=".views.ActorDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".views.MovieDetailsActivity"
             android:exported="true" />
