--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     </queries>
 
     <application
-        android:name=".BaseApplication"
+        android:name=".di.component.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,11 +30,11 @@
             android:exported="true" />
         <activity
             android:name=".views.SearchActivity"
+            android:launchMode="singleTop"
             android:exported="true" />
         <activity
             android:name=".views.MainActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustPan">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
