--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,8 @@
             android:name=".views.MovieDetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".views.SearchActivity"
-            android:launchMode="singleTop"
-            android:exported="true" />
-        <activity
             android:name=".views.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
