--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,9 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation "com.zlc.glide:webpdecoder:1.7.4.11.0"
+
+    //Youtube
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
 }
