--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,10 +110,21 @@ dependencies {
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata:2.5.0'
 
-    // Room
+    //Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:2.5.0-alpha02"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
