--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -7,21 +7,21 @@ assignees: |
 body:
   - type: markdown
     attributes:
-      label: Is your feature request related to a problem? Please describe.
+      labels: Is your feature request related to a problem? Please describe.
       value: |
         A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
     validations:
       required: true
   - type: markdown
     attributes:
-      label: Describe alternatives you have considered.
+      labels: Describe alternatives you have considered.
       value: |
         A clear and concise description of any alternative solutions or features you've considered.
     validations:
       required: true
   - type: markdown
     attributes:
-      label: Additional Context
+      labels: Additional Context
       value: |
        Add any other context or screenshots about the feature request here.
     validations:
