--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -5,24 +5,24 @@ labels: ["enhancement"]
 assignees: |
   - Indisparte
 body:
-  - type: markdown
+  - type: textarea
     attributes:
-      labels: Is your feature request related to a problem? Please describe.
-      value: |
+      label: Is your feature request related to a problem? Please describe.
+      placeholder: |
         A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
     validations:
       required: true
-  - type: markdown
+  - type: textarea
     attributes:
-      labels: Describe alternatives you have considered.
-      value: |
+      label: Describe alternatives you have considered.
+      placeholder: |
         A clear and concise description of any alternative solutions or features you've considered.
     validations:
       required: true
-  - type: markdown
+  - type: textarea
     attributes:
-      labels: Additional Context
-      value: |
+      label: Additional Context
+      placeholder: |
        Add any other context or screenshots about the feature request here.
     validations:
       required: false
