--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,7 +2,7 @@ name: 🚀 Feature Request
 description: Suggest an idea for this project
 title: "[Feat]: <title>"
 labels: ["enhancement"]
-assignees: |
+assignees:
   - Indisparte
 body:
   - type: textarea
