--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -2,6 +2,8 @@ name: 🐞 Bug Report
 description: File a bug report
 title: "[Bug]: <title>"
 labels: ["bug"]
+assignees:
+  - Indisparte
 body:
   - type: checkboxes
     attributes:
