--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,6 +1,6 @@
 name: 🚀 Feature Request
 description: Suggest an idea for this project
-title: "[Feat]: <title>"
+title: "<title>"
 labels: ["enhancement"]
 assignees:
   - Indisparte
