--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -18,7 +18,7 @@ body:
       placeholder: |
         A clear and concise description of any alternative solutions or features you've considered.
     validations:
-      required: true
+      required: false
   - type: textarea
     attributes:
       label: Additional Context
