--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt"
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
 
 
         // NOTE: Do not place your application dependencies here; they belong
