Created a new visual component to show a Horizontal chip group
+ The component allows users to pass a list of any objects and specify which member to insert as text into the chip

+Users can also provide an action bound to the click of each chip

+The code makes use of view binding to avoid cast errors

+This component can be used in different parts of the application to show a group of selectable items in a horizontal layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
