Update gradle and Add new Module

--- a/HorizontalChipView/build.gradle
+++ b/HorizontalChipView/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.indisparte.linearlayoutinfo'
+    namespace 'com.indisparte.horizontalchipview'
     compileSdk 33
 
     defaultConfig {
@@ -20,10 +20,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    buildFeatures{
-        viewBinding true
-        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,5 +38,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.borjabravo:readmoretextview:2.1.0'
 }
