--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ rootProject.name = "CineMates"
 include ':app'
 include ':LinearLayoutInfo'
 include ':HorizontalChipView'
+include ':RecyclerViewEmptyStateSupport'
