--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,52 +1,61 @@
-name: 🐞 Bug Report
+name: Bug Report
 description: File a bug report
-title: "<title>"
-labels: ["bug"]
+title: "[Bug]: "
+labels: ["bug", "triage"]
 assignees:
-  - Indisparte
+  - octocat
 body:
-  - type: checkboxes
+  - type: markdown
     attributes:
-      label: Is there an existing issue for this?
-      description: Please search to see if an issue already exists for the bug you encountered.
+      value: |
+        Thanks for taking the time to fill out this bug report!
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
+    validations:
+      required: false
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Describe the issue here.
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
+      required: true
+  - type: dropdown
+    id: browsers
+    attributes:
+      label: What type of browser are you seeing the problem on?
+      multiple: true
       options:
-      - label: I have searched the existing issues
-        required: true
-  - type: textarea
-    attributes:
-      label: Current Behavior
-      description: A clear and concise description of what the bug is.
+        - Firefox
+        - Chrome
+        - Safari
+        - Microsoft Edge
     validations:
       required: true
-  - type: textarea
+
+  - type: dropdown
+    id: operating-systems
     attributes:
-      label: Expected Behavior
-      description: A clear and concise description of what you expected to happen.
+      label: What type of Operating System are you seeing the problem on?
+      multiple: true
+      options:
+        - Linux
+        - Windows
+        - Mac
+        - Other
     validations:
       required: true
-  - type: textarea
-    attributes:
-      label: Steps To Reproduce
-      description: Steps to reproduce the behavior.
-      placeholder: |
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
-    validations:
-      required: true
+      
+
   - type: textarea
     id: logs
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      label: Code to produce this issue.
+      description: Please copy and paste any relevant code to re-produce this issue. And the version of the browser you are using. 
       render: shell
-    validations:
-      required: false
-  - type: textarea
-    attributes:
-      label: Anything else?
-      description: |
-        Links? References? Anything that will give us more context about the issue you are encountering!
-    validations:
-      required: false
