--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
         legacy = '1.0.0'
         lifecycle_ktx = '2.5.1'
         lifecycle_viewmodel_ktx = '2.6.0-alpha01'
-        logging_interceptor = '4.9.1'
+        logging_interceptor = '5.0.0-alpha.3'
         retrofit = '2.9.0'
         room = '2.4.3'
         rx_java = '3.0.0'
