--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,48 @@
 [versions]
+appcompat = "1.5.0"
+material = "1.6.1"
+constraintLayout = "2.1.4"
+fragmentKtx = "1.5.5"
+junitTest = "4.13.2"
+junitAndroidTest = "1.1.3"
+espresso = "3.4.0"
+legacy = "1.0.0"
+core = "1.2.0"
+coroutines = "1.6.4"
+okhttp = "5.0.0-alpha.3"
+retrofit = "2.9.0"
+navigation = "2.5.1"
+glide = "4.12.0"
+dagger = "2.45"
+
+
 [libraries]
+appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
+constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
+legacy = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy" }
+fragmentKtx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+junitTest = { module = "junit:junit", version.ref = "junitTest" }
+junitAndroidTest = { module = "androidx.test.ext:junit", version.ref = "junitAndroidTest" }
+espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+core-ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+retrofit2-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit2-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
+navigation-features = {module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
+glide-core = {module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = {module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+dagger-android = {module = "com.google.dagger:hilt-android", version.ref = "dagger" }
+dagger-compiler = {module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
+
 [bundles]
+coroutines = ["coroutines.core", "coroutines.android"]
+retrofit = ["retrofit2.core", "retrofit2.converter", "logging.interceptor", "okhttp.core"]
+navigation = ["navigation.fragment", "navigation.ui", "navigation-features"]
+
 [plugins]
