--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext {
-        // Android Constants
-        COMPILE_SDK = 33
-        MIN_SDK = 26
-        TARGET_SDK = COMPILE_SDK
-        GRADLE_BUILD = '7.3.1'
-
-        // Dependencies
-        lifecycle_ktx = '2.5.1'
-        lifecycle_viewmodel_ktx = '2.6.0-alpha01'
-
-    }
-
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$GRADLE_BUILD"
-       // classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation"
-        //classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt"
-        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins{
+    alias(libs.plugins.jetbrains.kotlin) apply false
+    alias(libs.plugins.dagger.android) apply false
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.safeargs) apply false
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
