--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ retrofit = "2.9.0"
 navigation = "2.5.1"
 glide = "4.12.0"
 dagger = "2.45"
-
+jetbrainsPlugin = "1.7.20"
+androidGradlePlugin = "7.3.1"
 
 [libraries]
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -34,11 +35,11 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
-navigation-features = {module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
-glide-core = {module = "com.github.bumptech.glide:glide", version.ref = "glide" }
-glide-compiler = {module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
-dagger-android = {module = "com.google.dagger:hilt-android", version.ref = "dagger" }
-dagger-compiler = {module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
+navigation-features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
+glide-core = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+dagger-core = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
+dagger-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
 
 [bundles]
 coroutines = ["coroutines.core", "coroutines.android"]
@@ -46,3 +47,7 @@ retrofit = ["retrofit2.core", "retrofit2.converter", "logging.interceptor", "okh
 navigation = ["navigation.fragment", "navigation.ui", "navigation-features"]
 
 [plugins]
+android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+jetbrains-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "jetbrainsPlugin" }
+dagger-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
+safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
