--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation project(path: ':LinearLayoutInfo')
     implementation project(path: ':HorizontalChipView')
     implementation project(path: ':RecyclerViewEmptyStateSupport')
+    implementation project(path: ':MoreLessTextView')
 
     implementation(libs.appcompat)
     implementation(libs.material)
