--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':app'
 include ':LinearLayoutInfo'
 include ':HorizontalChipView'
 include ':RecyclerViewEmptyStateSupport'
+include ':MoreLessTextView'
