Create new Module
Add version catalogue

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':LinearLayoutInfo'
 include ':HorizontalChipView'
 include ':RecyclerViewEmptyStateSupport'
 include ':MoreLessTextView'
+include ':PosterView'
