--- a/data/tv/build.gradle
+++ b/data/tv/build.gradle
@@ -33,6 +33,10 @@ android {
 
 dependencies {
 
+    implementation project(":core:model")
+    implementation project(":core:response")
+    implementation project(":core:network")
+
     implementation libs.bundles.androidX
     testImplementation libs.junitTest
 
