refactor: Renamed the "actor" package to "people"

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,6 @@ include ':core:network'
 include ':core:ui'
 include ':data:movie'
 include ':data:tv'
-include ':data:actor'
+include ':data:people'
 include ':data:genre'
 include ':core:response'
