feat: Added functions for video retrieval

--- a/core/response/build.gradle
+++ b/core/response/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.indisparte.response'
-    compileSdk 33
+    compileSdk libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdk libs.versions.minSdk.get().toInteger()
+        targetSdk libs.versions.targetSdk.get().toInteger()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,10 +32,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation libs.bundles.androidX
+    testImplementation libs.junitTest
+
+
+    //Retrofit
+    implementation libs.bundles.retrofit
+
+
 }
