--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':data:genre'
 include ':core:response'
 include ':feature:home'
 include ':feature:movie_details'
+include ':core:navigation'
