--- a/core/navigation/build.gradle
+++ b/core/navigation/build.gradle
@@ -1,13 +1,12 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
+
 }
 
 android {
-    namespace 'com.indisparte.movie_details'
+    namespace 'com.indisparte.navigation'
     compileSdk libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
@@ -31,20 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
-        viewBinding true
-        dataBinding true
-    }
 }
 
 dependencies {
 
-    implementation project(':core:util')
-    implementation project(':core:ui')
-    implementation project(':core:network')
-    implementation project(':core:model')
-    implementation project(':core:navigation')
-    implementation project(':data:movie')
 
     implementation(libs.appcompat)
     implementation(libs.material)
@@ -55,17 +44,6 @@ dependencies {
     androidTestImplementation(libs.junitAndroidTest)
     androidTestImplementation(libs.espresso)
 
-    // Kotlin Extensions
-    implementation(libs.core.ktx)
-
-    // Kotlin Coroutines
-    implementation(libs.bundles.coroutines)
-
     // Jetpack Navigation - Kotlin
     implementation(libs.bundles.navigation)
-
-    // Dagger Hilt
-    implementation(libs.dagger.core)
-    kapt(libs.dagger.compiler)
-
 }
