--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(':core:ui')
     implementation project(':core:network')
     implementation project(':core:model')
+    implementation project(':core:navigation')
     implementation project(':data:movie')
     implementation project(':data:tv')
     implementation project(':data:people')
