--- a/feature/movie_details/build.gradle
+++ b/feature/movie_details/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation(libs.dagger.core)
     kapt(libs.dagger.compiler)
 
+    //Timber
+    implementation(libs.timber)
+
 }
