feat: add similar movies fragment

--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     implementation project(":core:util")
     implementation project(":core:model")
+    implementation project(":core:navigation")
 
     implementation libs.bundles.androidX
     implementation libs.material
