--- a/gradle.properties
+++ b/gradle.properties
@@ -16,10 +16,11 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.daemon=true
 # The below line of code enables compilation of multiple modules at the same time.
 # Besides that it also gives us other benefits such as;
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+org.gradle.unsafe.configuration-cache=true
 
