feat: Added view pager for backdrops

--- a/feature/movie_details/build.gradle
+++ b/feature/movie_details/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     //Timber
     implementation(libs.timber)
 
+    //CircleIndicator
+    implementation 'me.relex:circleindicator:2.1.6'
+
 }
