feat: Create new module for search

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':core:response'
 include ':feature:home'
 include ':feature:movie_details'
 include ':core:navigation'
+include ':data:search'
