feat: created module feature:media_discover

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':core:navigation'
 include ':data:search'
 include ':feature:media_search'
 include ':data:discover'
+include ':feature:media_discover'
