feat: created filter bottom sheet layout

--- a/feature/media_discover/build.gradle
+++ b/feature/media_discover/build.gradle
@@ -69,4 +69,8 @@ dependencies {
 
     //Timber
     implementation(libs.timber)
+
+    //
+    implementation 'com.google.android.material:material:1.11.0-alpha01'
+
 }
