feat: Improved the filtering system.
+ Now the elements of a filter are stored so that the bottomsheet can update itself

--- a/feature/media_discover/build.gradle
+++ b/feature/media_discover/build.gradle
@@ -71,5 +71,7 @@ dependencies {
     //Timber
     implementation(libs.timber)
 
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.22"
+
 
 }
