feat: init person details feature
+ Add navigation code
+ Add design

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':data:search'
 include ':feature:media_search'
 include ':data:discover'
 include ':feature:media_discover'
+include ':feature:person_details'
