feat: Implemented person details.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project(':feature:movie_details')
     implementation project(':feature:media_search')
     implementation project(':feature:media_discover')
+    implementation project(':feature:person_details')
 
 
     implementation(libs.appcompat)
