--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -53,4 +53,5 @@ dependencies {
 
     //Timber
     implementation(libs.timber)
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.22"
 }
