--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
 
     implementation project(":core:util")
+    implementation project(":core:network")
 //    implementation project(":core:model:base")
     implementation project(":core:model:person")
     implementation project(":core:model:movie")
