--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -2,8 +2,9 @@ name: 🐞 Bug Report
 description: File a bug report
 title: "[Bug]: "
 labels: ["bug"]
+prijects: ["CineMates"]
 assignees:
-  - Indisparte
+  - iamantoniodinuzzo
 body:
   - type: markdown
     attributes:
