--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,4 @@
 # @Indisparte will be requested for
 # review when someone opens a pull request.
 # if you want to add more owners just write it after the demo user @Indisparte
-*       @Indisparte
+*       @iamantoniodinuzzo
